--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         }
 
         initializeImages();
-        moveImages();
+        requestAnimationFrame(moveImages);
     </script>
 </body>
 </html>
