--- a/index.html
+++ b/index.html
@@ -1,70 +1,102 @@
-<script>
-    const container = document.getElementById('container');
-    const imageFiles = [
-        'photo_2024-11-12_16-12-29.jpg',
-        'photo_2025-01-08_23-39-35.jpg',
-        'photo_2025-01-08_23-39-48.jpg',
-        'photo_2025-01-08_23-40-21.jpg',
-        'photo_2025-01-08_23-40-26.jpg'
-    ];
-
-    const images = [];
-
-    function randomPosition() {
-        return {
-            x: Math.random() * (container.clientWidth - container.clientWidth * 0.15),
-            y: Math.random() * (container.clientHeight - container.clientHeight * 0.15),
-            dx: (Math.random() > 0.5 ? 1 : -1) * 2, // Speed multiplier
-            dy: (Math.random() > 0.5 ? 1 : -1) * 2
-        };
-    }
-
-    function createImageElement(src) {
-        const img = document.createElement('img');
-        img.src = src;
-        img.classList.add('image');
-
-        // Check if this is the "Umar" image
-        if (src === 'photo_2024-11-12_16-12-29.jpg') {
-            img.style.zIndex = 1000; // Always on top
-        } else {
-            img.style.zIndex = 1; // Default z-index for other images
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dynamic Media Layout</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
 
-        const position = randomPosition();
-        img.style.left = `${position.x}px`;
-        img.style.top = `${position.y}px`;
+        body {
+            overflow: hidden;
+            height: 100vh;
+        }
 
-        container.appendChild(img);
-        images.push({ img, ...position });
-    }
+        #container {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            border: 10px solid black;
+            overflow: hidden;
+        }
 
-    function moveImages() {
-        images.forEach(image => {
-            const img = image.img;
-            let x = image.x + image.dx;
-            let y = image.y + image.dy;
+        .image {
+            position: absolute;
+            width: 15vw;
+            height: auto;
+            object-fit: cover;
+        }
+    </style>
+</head>
+<body>
+    <div id="container"></div>
 
-            if (x <= 0 || x + img.clientWidth >= container.clientWidth) {
-                image.dx *= -1;
-                x = Math.max(0, Math.min(container.clientWidth - img.clientWidth, x));
-            }
+    <script>
+        const container = document.getElementById('container');
+        const imageFiles = [
+            'photo_2024-11-12_16-12-29.jpg',
+            'photo_2025-01-08_23-39-35.jpg',
+            'photo_2025-01-08_23-39-48.jpg',
+            'photo_2025-01-08_23-40-21.jpg',
+            'photo_2025-01-08_23-40-26.jpg'
+        ];
 
-            if (y <= 0 || y + img.clientHeight >= container.clientHeight) {
-                image.dy *= -1;
-                y = Math.max(0, Math.min(container.clientHeight - img.clientHeight, y));
-            }
+        const images = [];
 
-            image.x = x;
-            image.y = y;
+        function randomPosition() {
+            return {
+                x: Math.random() * (container.clientWidth - container.clientWidth * 0.15),
+                y: Math.random() * (container.clientHeight - container.clientHeight * 0.15),
+                dx: (Math.random() > 0.5 ? 1 : -1) * 2, // Speed multiplier
+                dy: (Math.random() > 0.5 ? 1 : -1) * 2
+            };
+        }
 
-            img.style.left = `${image.x}px`;
-            img.style.top = `${image.y}px`;
-        });
+        function createImageElement(src) {
+            const img = document.createElement('img');
+            img.src = src;
+            img.classList.add('image');
 
-        requestAnimationFrame(moveImages);
-    }
+            const position = randomPosition();
+            img.style.left = `${position.x}px`;
+            img.style.top = `${position.y}px`;
 
-    imageFiles.forEach(createImageElement);
-    moveImages();
-</script>
+            container.appendChild(img);
+            images.push({ img, ...position });
+        }
+
+        function moveImages() {
+            images.forEach(image => {
+                const img = image.img;
+                let x = image.x + image.dx;
+                let y = image.y + image.dy;
+
+                if (x <= 0 || x + img.clientWidth >= container.clientWidth) {
+                    image.dx *= -1;
+                    x = Math.max(0, Math.min(container.clientWidth - img.clientWidth, x));
+                }
+
+                if (y <= 0 || y + img.clientHeight >= container.clientHeight) {
+                    image.dy *= -1;
+                    y = Math.max(0, Math.min(container.clientHeight - img.clientHeight, y));
+                }
+
+                image.x = x;
+                image.y = y;
+
+                img.style.left = `${image.x}px`;
+                img.style.top = `${image.y}px`;
+            });
+
+            requestAnimationFrame(moveImages);
+        }
+
+        imageFiles.forEach(createImageElement);
+        moveImages();
+    </script>
+</body>
+</html>
