--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             return {
                 x: Math.random() * (container.clientWidth - container.clientWidth * 0.15),
                 y: Math.random() * (container.clientHeight - container.clientHeight * 0.15),
-                dx: (Math.random() > 0.5 ? 1 : -1) * 2, // Speed multiplier
-                dy: (Math.random() > 0.5 ? 1 : -1) * 2
+                dx: (Math.random() > 0.5 ? 1 : -1) * 1, // Reduced speed multiplier
+                dy: (Math.random() > 0.5 ? 1 : -1) * 1
             };
         }
 
