--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
             box-sizing: border-box;
         }
 
+        #video {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+        }
+
         .image {
             position: absolute;
             width: 15vw;
@@ -40,7 +48,12 @@
 </head>
 <body>
     <div id="container">
-        <div id="center-rectangle"></div>
+        <div id="center-rectangle">
+            <video id="video" autoplay loop muted>
+                <source src="محمد السليم سيارتي جيب.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
     </div>
 
     <script>
