--- a/index.html
+++ b/index.html
@@ -28,14 +28,16 @@
             position: absolute;
             border: 10px solid black;
             box-sizing: border-box;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
         }
 
         #video {
-            position: absolute;
             width: 100%;
             height: 100%;
             object-fit: cover;
-            z-index: -1;
         }
 
         .image {
