--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
     <div id="container">
         <div id="center-rectangle">
-            <video id="video" autoplay loop muted>
+            <video id="video" controls>
                 <source src="محمد السليم سيارتي جيب.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
