--- a/index.html
+++ b/index.html
@@ -32,13 +32,14 @@
             justify-content: center;
             align-items: center;
             overflow: hidden;
-            z-index: 10; /* Ensure the rectangle and video are above the images */
+            z-index: 1000; /* Ensure the rectangle and video are always above the images */
         }
 
         #video {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            z-index: 1000; /* Ensure the video stays above other elements */
         }
 
         .image {
