--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         body {
             overflow: hidden;
             height: 100vh;
+            background-color: brightgreen; /* Bright green background */
         }
 
         #container {
@@ -22,6 +23,17 @@
             height: 100%;
             border: 10px solid black;
             overflow: hidden;
+        }
+
+        #title {
+            position: absolute;
+            width: 100%;
+            text-align: center;
+            top: 10px;
+            font-size: 2em;
+            font-weight: bold;
+            z-index: 1000;
+            color: brightred; /* Bright red title color */
         }
 
         #center-rectangle {
@@ -53,6 +65,7 @@
 </head>
 <body>
     <div id="container">
+        <div id="title">Cool ass webpage</div>
         <div id="center-rectangle">
             <video id="video" controls>
                 <source src="محمد السليم سيارتي جيب.mp4" type="video/mp4">
