--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         body {
             overflow: hidden;
             height: 100vh;
-            background-color: brightgreen; /* Bright green background */
+            background-color: limegreen; /* Bright green background */
         }
 
         #container {
@@ -33,7 +33,7 @@
             font-size: 2em;
             font-weight: bold;
             z-index: 1000;
-            color: brightred; /* Bright red title color */
+            color: red; /* Bright red title color */
         }
 
         #center-rectangle {
