--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         body {
             overflow: hidden;
             height: 100vh;
-            background-color: limegreen; /* Bright green background */
         }
 
         #container {
@@ -23,6 +22,7 @@
             height: 100%;
             border: 10px solid black;
             overflow: hidden;
+            background-color: limegreen; /* Bright green background inside the border */
         }
 
         #title {
