--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div id="container">
         <div id="title">Cool ass webpage</div>
         <div id="center-rectangle">
-            <video id="video" controls autoplay muted>
+            <video id="video" controls muted>
                 <source src="محمد السليم سيارتي جيب.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
