--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
             z-index: 1000; /* Ensure the video stays above other elements */
         }
 
+        @media screen and (max-width: 768px) {
+            #video {
+                width: 120%;
+                height: 120%;
+            }
+        }
+
         .image {
             position: absolute;
             width: 15vw;
