--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
             }
         }
 
+        @media screen and (orientation: portrait) {
+            #center-rectangle {
+                width: 100%;
+                height: 50%;
+                top: 25%;
+                left: 0;
+            }
+        }
+
         .image {
             position: absolute;
             width: 15vw;
