--- a/index.html
+++ b/index.html
@@ -59,14 +59,12 @@
                 width: 120%;
                 height: 120%;
             }
-        }
 
-        @media screen and (orientation: portrait) {
             #center-rectangle {
-                width: 100%;
-                height: 50%;
-                top: 25%;
-                left: 0;
+                width: 50%;
+                height: 25%; /* Half the width */
+                top: 37.5%; /* Centered vertically */
+                left: 25%; /* Centered horizontally */
             }
         }
 
